Fixed layout problems

--- a/wa/wa6.css
+++ b/wa/wa6.css
@@ -15,7 +15,7 @@
 
 .overlayA {
     position: absolute;
-    top: 50vh;
+    bottom: 60vh;
     left: 25px;
 }
 
@@ -129,7 +129,7 @@
     border: 0.25em solid black;
     border-radius: 1em;
     background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgb(126, 126, 126));
-    height: 75vh;
+    height: 85vh;
 }
 .box2B h1 {
     text-align: center;
@@ -148,7 +148,7 @@
 }
 .box2B button{
     /*Yoinked from W3C schools*/
-    margin: 10em 0em 0em 0em;
+    margin: 0em 0em 0em 0em;
     position: absolute;
     left: 50%;
     -ms-transform: translate(-50%);
